force-app/main/default/objects/sked__Availability_Template__c/sked__Availability_Template__c.object-meta.xml
<CustomObject>
    <label>Availability Template</label>
    <nameField>
        <label>Availability Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Availability Templates</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>