force-app/main/default/objects/sked__Availability_Template__c/fields/sked__Availability_Pattern__c.field-meta.xml
<CustomField>
    <fullName>sked__Availability_Pattern__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Availability Pattern</label>
    <referenceTo>sked__Availability_Pattern__c</referenceTo>
    <relationshipLabel>Availability Templates</relationshipLabel>
    <relationshipName>Availability_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>