force-app/main/default/objects/sked__Availability_Template__c/fields/sked__Global__c.field-meta.xml
<CustomField>
    <fullName>sked__Global__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, this availability template will apply to all users</inlineHelpText>
    <label>Global</label>
    <type>Checkbox</type>
</CustomField>