force-app/main/default/objects/sked__Availability_Template__c/fields/sked__Start__c.field-meta.xml
<CustomField>
    <fullName>sked__Start__c</fullName>
    <label>Start</label>
    <type>Date</type>
</CustomField>