force-app/main/default/objects/sked__Availability_Template__c/validationRules/StartEndDateCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>StartEndDateCheck</fullName>
    <active>true</active>
    <errorConditionFormula>sked__Start__c &gt; sked__Finish__c</errorConditionFormula>
    <errorMessage>Start Date cannot be after the End Date</errorMessage>
</ValidationRule>